--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-native-web": "0.0.49",
-    "react": "15.3.2",
+    "react": "15.4",
+    "react-native-svg": "5.1.3",
+    "react-native-web": "0.0.77",
     "url-loader": "0.5.7"
   },
   "devDependencies": {
